--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             padding: 8px;
             text-align: left;
         }
-        th { /* Estilo para "Moeda:" e "Valor (BRL:)" */
+        th { /* Estilo para "Moeda:" e "Valor (BRL):" */
             background-color: #0057B7; /* Azul para "Moeda:" */
             color: #ffffff; /* Texto branco */
             font-weight: bold;
@@ -88,7 +88,7 @@
         <thead>
             <tr>
                 <th class="moeda">Moeda:</th>
-                <th class="valor">Valor (BRL:)</th>
+                <th class="valor">Valor (BRL):</th>
             </tr>
         </thead>
         <tbody>
