--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             margin: 20px auto;
             border-collapse: collapse;
             background-color: white;
+            position: relative;
         }
         th, td {
             border: 1px solid #ddd;
@@ -42,17 +43,17 @@
         }
         .flag {
             position: absolute;
-            top: 10px;
+            top: -30px; /* Posiciona as bandeiras acima da tabela */
             width: 50px;
             height: 30px;
             background: linear-gradient(to bottom, #0057B7 50%, #FFD700 50%);
             border: 1px solid #000;
         }
         .flag-left {
-            left: 10px;
+            left: 0; /* Alinha a bandeira esquerda no topo da tabela */
         }
         .flag-right {
-            right: 10px;
+            right: 0; /* Alinha a bandeira direita no topo da tabela */
         }
         .theme-toggle {
             position: fixed;
@@ -93,9 +94,9 @@
     </style>
 </head>
 <body>
-    <div class="flag flag-left"></div>
-    <div class="flag flag-right"></div>
     <table id="cotacoes">
+        <div class="flag flag-left"></div>
+        <div class="flag flag-right"></div>
         <thead>
             <tr>
                 <th class="moeda">Moeda:</th>
@@ -168,7 +169,10 @@
                 return `${dia}.${mes}.${ano}`;
             };
 
-            const horaFormatada = (hora) => hora.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
+            const horaFormatada = (hora, opcoes = {}) => {
+                return new Date(hora.toLocaleString('en-US', opcoes))
+                    .toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit', hour12: false });
+            };
 
             // Data e hora do Brasil
             const dataBrasil = dataFormatada(agora);
@@ -177,7 +181,7 @@
             // Data e hora da Ucrânia
             const opcoesKiev = { timeZone: 'Europe/Kiev' };
             const dataUcrania = dataFormatada(new Date(new Date().toLocaleString('en-US', opcoesKiev)));
-            const horaUcrania = new Date().toLocaleTimeString('en-US', { ...opcoesKiev, hour: '2-digit', minute: '2-digit' });
+            const horaUcrania = horaFormatada(agora, opcoesKiev);
 
             document.getElementById('data-brasil').innerText = dataBrasil;
             document.getElementById('hora-brasil').innerText = horaBrasil;
