--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         .container {
             position: relative;
-            margin-top: 20px; /* Move a tabela mais para cima */
+            margin-top: 10px; /* Move a tabela bem para cima */
         }
         table {
             width: 100%; /* Estende a tabela para cobrir os lados */
@@ -50,8 +50,8 @@
             margin-top: 10px; /* Espaço entre a tabela e as bandeiras */
         }
         .flag {
-            width: 60px; /* Ajusta o tamanho das bandeiras */
-            height: 40px;
+            width: 80px; /* Aumenta o tamanho das bandeiras para maior visibilidade */
+            height: 50px;
             background: linear-gradient(to bottom, #0057B7 50%, #FFD700 50%);
             border: 1px solid #000;
         }
