--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             margin-top: 0; /* Posiciona a tabela no topo */
         }
         table {
-            width: 98%; /* Aumenta a largura da tabela para ocupar quase toda a tela */
+            width: 99%; /* Aumenta a largura da tabela para ocupar praticamente toda a tela */
             margin: 0 auto;
             border-collapse: collapse;
             background-color: white;
